creusot/tests/should_fail/prusti/logic/home_mismatch.stderr
error[creusot]: `X` cannot be moved from `'0h` to `'now` since it didn't exist at that point
 --> home_mismatch.rs:6:5
  |
6 |     x
  |     ^

error: aborting due to previous error

